welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: '=>' expected but ',' found.
			case 0, 6 => return 10:00;
                              ^alarmClock:6: error: '=>' expected but ',' found.
			case 1, 2, 3, 4, 5 => return 7:00;
                              ^alarmClock:11: error: '=>' expected but ',' found.
			case 0, 6 => return off;
                              ^alarmClock:12: error: '=>' expected but ',' found.
			case 1, 2, 3, 4, 5 => return 10:00;
                              ^