welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	var d="";
	if (!vacation) {
		d match {
			case 0, 6 => return 10:00;
			case 1, 2, 3, 4, 5 => return 7:00;
		}
	}
	if (vacation) {
		d match {
			case 0, 6 => return off;
			case 1, 2, 3, 4, 5 => return 10:00;
		}
	}
}
